fixed partner image size on mobile changed partner padding

--- a/src/styles/index-page/partners.scss
+++ b/src/styles/index-page/partners.scss
@@ -26,9 +26,9 @@
   @media screen and (max-width: 1100px) {
     grid-template-columns: repeat(8, 1fr);
     .partner {
-      padding: 0 2rem;
+      padding: 0 1.5rem;
       img{
-
+        height: 80px;
       }
     }
     .mobile {
@@ -41,6 +41,9 @@
     grid-template-columns: repeat(4, 1fr);
     .partner {
       padding: 2rem 0;
+      img{
+        height: 100px;
+      }
     }
   }
   .partner {
@@ -52,7 +55,7 @@
 
     img {
       mix-blend-mode: multiply;
-      height: 100px;
+
       max-width: 250px;
       object-fit: contain;
     }
